--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header {
 h1 {
   font-size: 36px;
   margin-bottom: 40px;
+  color: var(--text-primary);
 }
 
 #page-head h3 {
@@ -57,10 +58,12 @@ h1 {
 
 h2 {
   font-size: 32px;
+  color: var(--text-primary);
 }
 
 h3 {
   font-size: 28px;
+  color: var(--text-primary);
 }
 
 p {
@@ -70,7 +73,13 @@ p {
 
 #content-list {
   margin-top: 40px;
+  margin-bottom: 40px;
   border-top: 1px solid #d9d9d9;
+}
+
+#divider {
+  margin-bottom: 40px;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 #title {
@@ -105,6 +114,33 @@ ol h3 {
 ul {
   list-style-type: disc;
   font-weight: bold;
-  
+  margin-left: 24px;
+}
 
+#card-travel-three {
+  margin-bottom: 40px;
+}
+
+.one-item {
+  color: var(--accent-blue);
+}
+
+#last-list li:nth-child(1) {
+  color: var(--accent-purple);
+}
+
+#last-list li:nth-child(2) {
+  color: var(--accent-pink);
+}
+
+#last-list li:nth-child(3) {
+  color: var(--accent-orange);
+}
+
+#description {
+  text-align: center;
+}
+
+footer {
+  vertical-align: middle;
 }
