--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ ol h3 {
   margin-left: 40px;
 }
 
+ol ul {
+  margin-bottom: 48px;
+}
+
 ul {
   list-style-type: disc;
   font-weight: bold;
@@ -142,5 +146,9 @@ ul {
 }
 
 footer {
+  margin: 65px auto 48px;
+  text-align: center;
+}
+footer img {
   vertical-align: middle;
 }
